--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <body>
     <div class="primary-header panel">
         <div>
-            TEXT
+            Test
         </div>
     </div>
     <div class="primary-content panel">
         <div>
-            TEXT
+            
+            <div class="primary-content-wrap">
+                <aside>aside</aside>
+                <main>main</main>
+            </div>
+
         </div>
     </div>
 </body>
