updated after following Brad

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="primary-header panel">
         <div>
-            Test
+            
+            <nav>
+                <div class="left">left</div>
+                <div class="right">right</div>
+            </nav>
+
         </div>
     </div>
     <div class="primary-content panel">
