--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 <body>
     <div class="primary-header panel">
         <div>
-            
+
             <nav>
-                <div class="left">left</div>
-                <div class="right">right</div>
+                <div class="left">
+                    <div class="github-logo"></div>
+                    <div class="search-bar"></div>
+                    <div class="pull-request"></div>
+                    <div class="issues"></div>
+                    <div class="marketplace"></div>
+                    <div class="explore"></div>
+                </div>
+                <div class="right">
+                    <div class="user-image-header"></div>
+                    <div class="user-repo-menu"></div>
+                </div>
             </nav>
 
         </div>
@@ -22,9 +32,47 @@
         <div>
             
             <div class="primary-content-wrap">
-                <aside>aside</aside>
-                <main>main</main>
+                <aside>
+
+                    <div class="user-image-side"></div>
+                    <div class="username"></div>
+                    <div class="add-a-bio"></div>
+                    <div class="edit-profile"></div>
+
+                </aside>
+                <main>
+
+                    <div class="main-menu">Menu</div>
+                    <div class="popular-repos">Popular Repos</div>
+                    <div class="contributions">Contributions</div>
+                    <div class="activity">Activity</div>
+
+                </main>
             </div>
+
+        </div>
+    </div>
+    <div class="primary-footer panel">
+        <div>
+
+            <nav>
+                <div class="left">
+                    <div class="copyright"></div>
+                    <div class="terms"></div>
+                    <div class="privacy"></div>
+                    <div class="security"></div>
+                    <div class="status"></div>
+                    <div class="help"></div>
+                </div>
+                <div class="right">
+                    <div class="contact-github"></div>
+                    <div class="api"></div>
+                    <div class="training"></div>
+                    <div class="shop"></div>
+                    <div class="blog"></div>
+                    <div class="about"></div>
+                </div>
+            </nav>
 
         </div>
     </div>
