--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <div class="explore"></div>
                 </div>
                 <div class="right">
-                    <div class="user-image-header"></div>
                     <div class="user-repo-menu"></div>
+                    <div class="user-image-header"></div>
                 </div>
             </nav>
 
@@ -41,8 +41,18 @@
 
                 </aside>
                 <main>
+                    <div>
+                        <nav>
+                            <div class="right">
+                                <div class="main-overview"></div>
+                                <div class="main-repos"></div>
+                                <div class="main-stars"></div>
+                                <div class="main-followers"></div>
+                                <div class="main-following"></div>
+                            </div>
+                        </nav>
 
-                    <div class="main-menu">Menu</div>
+                    </div>
                     <div class="popular-repos">Popular Repos</div>
                     <div class="contributions">Contributions</div>
                     <div class="activity">Activity</div>
@@ -64,6 +74,7 @@
                     <div class="status"></div>
                     <div class="help"></div>
                 </div>
+                <div class="github-logo"></div>
                 <div class="right">
                     <div class="contact-github"></div>
                     <div class="api"></div>
